<resources>
    <string name="app_name">Q - Smart</string>
    <string name="q_smart_splash">Q - Smart</string>

    <string name="login_hint">Hint: Default Login email id and password was provided by Qualtech in the Kit</string>
    <string name="reset_email">Forgot Password?</string>
    <string name="reset_txt">We just need your Register email id to sent your password reset instructions</string>
    <string name="back">Back</string>

    <string name="enter_fullname">Enter your full name</string>
    <string name="enter_email">Enter your email id</string>
    <string name="enter_password">Enter password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="title_activity_settings">Settings</string>

    <string name="spinner_title_entertainment">Select type</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello details fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


    <!-- Bluetooth codes -->
    <string name="all_lights_bt_off_code">A</string>
    <string name="light1_on_bt_code">a</string>
    <string name="light1_off_bt_code">b</string>

    <string name="light2_on_bt_code">c</string>
    <string name="light2_off_bt_code">d</string>

    <string name="light3_on_bt_code">e</string>
    <string name="light3_off_bt_code">f</string>

    <string name="light4_on_bt_code">g</string>
    <string name="light4_off_bt_code">h</string>

    <string name="light5_on_bt_code">i</string>
    <string name="light5_off_bt_code">j</string>

    <string name="light6_on_bt_code">q</string>
    <string name="light6_off_bt_code">k</string>

    <string name="light7_on_bt_code">l</string>
    <string name="light7_off_bt_code">m</string>

    <string name="light8_on_bt_code">n</string>
    <string name="light8_off_bt_code">o</string>

    <string name="all_dimmer_off_bt_code">pq</string>

    <string name="dimmer1_on_bt_code">p</string>
    <string name="dimmer1_off_bt_code">q</string>

    <string name="dimmer2_on_bt_code">r</string>
    <string name="dimmer2_off_bt_code">s</string>

    <string name="all_fans_off_bt_code">rs</string>

    <string name="fan1_on_bt_code">t</string>
    <string name="fan1_off_bt_code">u</string>

    <string name="fan2_on_bt_code">v</string>
    <string name="fan2_off_bt_code">w</string>

    <string name="all_plugs_bt_off_code">xy</string>

    <string name="plug1_on_bt_code">x</string>
    <string name="plug1_OFF_bt_code">y</string>
    <string name="plug2_on_bt_code">z</string>
    <string name="plug2_off_bt_code">yz</string>

    <string name="plug3_on_bt_code">zy</string>
    <string name="plug3_off_bt_code">ii</string>
    <string name="plug4_on_bt_code">jj</string>
    <string name="plug4_off_bt_code">qq</string>


    <string name="all_fan_off">C</string>
    <string name="fan_speed_1">1</string>
    <string name="fan_speed_2">2</string>
    <string name="fan_speed_3">3</string>
    <string name="fan_speed_4">4</string>
    <string name="fan_speed_5">5</string>

    <string name="fan2_speed_1">6</string>
    <string name="fan2_speed_2">7</string>
    <string name="fan2_speed_3">8</string>
    <string name="fan2_speed_4">9</string>
    <string name="fan2_speed_5">B</string>


</resources>
