<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context="qualtech_q_smart_home_automation_2018.q_smart.Firebase.ResetActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp">

        <ImageView
            android:id="@+id/logic_logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password ?"
            android:textSize="23dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset_txt"
            android:text="@string/reset_txt"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_editTxt_reset"
            android:hint="@string/reset_email"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="17dp"
            android:backgroundTint="@color/login_blue_all"
            android:textColorHint="@color/login_blue_all"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_reset"
            android:text="Reset"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginRight="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_back"
            android:text="@string/back"
            android:textColor="@color/login_blue_all"
            android:layout_gravity="center"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rProgressBar"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>
